# polywatch

./: .env.example  .gitignore  LICENSE  README.md  RESULTS.md  config.example.yaml  pairs.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
polywatch/: __init__.py  arb.py  backtest.py  categories.py  cli.py  config.py  consensus.py  costs.py  crossarb.py  kalshi.py  models.py  polymarket.py  report.py  scorer.py  stats.py  sweep.py  walkforward.py
scripts/: pick_wallets.py
tests/: test_arb.py  test_backtest.py  test_categories.py  test_consensus.py  test_costs.py  test_crossarb.py  test_hardening.py  test_phase1_fixes.py  test_report.py  test_scorer_splits.py  test_stats.py  test_sweep.py  test_walkforward.py
